# mini-msg

./: Cargo.toml  Dockerfile  infra.json  run.sh
src/: lib.rs  main.rs
src/core/: mod.rs  node.rs  transporter.rs
src/transporter/: generic.rs  mod.rs  redis.rs
